--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Mi Sitio Web</title>
+  <title>AndeSecNet</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>¡Hola, mundo desde GitHub!</h1>
-  <p>Este es mi primer sitio web publicado.</p>
+  <h1>¡Hola, bienvenid@ a AndeSecNet!</h1>
+  <p>Estamos preparando el sitio para ti.</p>
   <script src="script.js"></script>
 </body>
 </html>
