--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
             <button class="btn btn-primary" type="submit">Enviar</button>
             <a class="btn btn-outline" href="mailto:contacto@andesecnet.cl">Enviar por correo</a>
           </div>
+          <p class="form-note">Pronto te contactaremos y resolveremos las inquietudes planteadas.</p>
+          <p class="form-note">Gracias por preferirnos.</p>
         </form>
       </div>
     </section>
