--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
     <div class="container footer-inner">
       <p>© <span id="year"></span> Andes Secure Network · Todos los derechos reservados</p>
       <div class="footer-links">
-        <a href="#servicios">Servicios</a>
-        <a href="#confianza">Confianza</a>
-        <a href="#tecnologia">Tecnología</a>
+        <p><a href="#servicios">Servicios</a></p>
+        <p><a href="#confianza">Confianza</a></p>
+        <p><a href="#tecnologia">Tecnología</a></p>
       </div>
     </div>
   </footer>
